--- a/compose.yaml
+++ b/compose.yaml
@@ -27,6 +27,7 @@ services:
     image: docker.elastic.co/elasticsearch/elasticsearch:7.10.1
     environment:
       - "discovery.type=single-node"
+      - xpack.security.enabled=false
     volumes:
       - elasticsearch_data:/usr/share/elasticsearch/data
 
@@ -37,14 +38,21 @@ services:
     ports:
       - "5601:5601"
 
-  logstash:
-    image: docker.elastic.co/logstash/logstash:7.10.1
+  axonserver:
+    image: axoniq/axonserver
+    hostname: axonserver
     volumes:
-      - ./logstash/config/logstash.yml:/usr/share/logstash/config/logstash.yml
-      - ./logstash/pipeline:/usr/share/logstash/pipeline
-    depends_on:
-      - elasticsearch
+      - axonserver-data:/data
+      - axonserver-events:/eventdata
+      - axonserver-config:/config:ro
+    ports:
+      - '8024:8024'
+      - '8124:8124'
+      - '8224:8224'
 
 volumes:
   postgres_data:
   elasticsearch_data:
+  axonserver-data:
+  axonserver-events:
+  axonserver-config:
