--- a/build.gradle
+++ b/build.gradle
@@ -24,7 +24,7 @@ dependencies {
 	implementation 'org.jetbrains.kotlin:kotlin-reflect'
 	implementation 'org.axonframework:axon-bom:4.5.13'
 	implementation 'org.axonframework:axon-spring-boot-starter:4.9.1'
-
+	implementation 'org.springframework.kafka:spring-kafka'
 
 	developmentOnly 'org.springframework.boot:spring-boot-docker-compose'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
